<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="?attr/colorPrimary">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="220dp"
                android:layout_height="220dp"
                android:layout_gravity="center"
                android:layout_marginTop="100dp"
                android:contentDescription="@string/image_logo"
                android:src="@drawable/lakon"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir"
                android:text="@string/app_name"
                android:textColor="?attr/colorSecondaryVariant"
                android:textSize="76sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/avenir"
                android:gravity="center"
                android:text="@string/textview"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="16.5sp"
                app:layout_constraintBottom_toTopOf="@id/button_scan"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <Button
                android:id="@+id/button_scan"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="75dp"
                android:backgroundTint="?attr/colorOnSecondary"
                android:fontFamily="@font/aladin_reg"
                android:text="@string/scan"
                android:textColor="?attr/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_list"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <Button
                android:id="@+id/button_list"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/colorOnSecondary"
                android:fontFamily="@font/aladin_reg"
                android:text="@string/list"
                android:textColor="?attr/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/button_scan"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button_scan" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>