<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="?attr/colorPrimary">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fitsSystemWindows="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:backgroundTint="?attr/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/tv_header_title"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="start"
                    android:src="@drawable/lakon"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:fontFamily="@font/avenir"
                    android:padding="5sp"
                    android:textSize="23sp"
                    android:textColor="?attr/colorSecondaryVariant"/>

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_preview"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="80dp"
                    android:layout_marginEnd="30dp"
                    android:contentDescription="@string/image_preview"
                    app:layout_constraintBottom_toTopOf="@id/nama_wayang"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_place_holder" />

                <TextView
                    android:id="@+id/nama_wayang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="38dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/aladin_reg"
                    android:text="@string/nama_wayang"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="28sp"
                    app:layout_constraintBottom_toTopOf="@id/deskripsi"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_preview" />

                <me.biubiubiu.justifytext.library.JustifyTextView
                    android:id="@+id/deskripsi"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/avenir"
                    android:padding="22dp"
                    android:text="@string/lorem_ipsum"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@id/hyperlink"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/nama_wayang" />

                <TextView
                    android:id="@+id/hyperlink"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="4dp"
                    android:padding="22dp"
                    android:textSize="16sp"
                    android:fontFamily="@font/avenir"
                    android:gravity="end"
                    android:text="@string/hyperlink"
                    android:textColor="@color/orange_1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/deskripsi" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>